---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
snapshot_kind: text
---
***Setup***

create table instruments (
    id bigint primary key generated always as identity,
    name text not null,
    z text, 
    created_at timestamp with time zone default now()
);

create table others (
    a text,
    b text,
    c text
);


--------------

select name from instruments i join others o on i.z = o.a |
select name from instruments i join others o on i.z = o.a w|
select name from instruments i join others o on i.z = o.a where |

Results:
o.a - public.others.a (Column)
o.b - public.others.b (Column)
o.c - public.others.c (Column)
i.created_at - public.instruments.created_at (Column)
i.id - public.instruments.id (Column)

--------------

select name from instruments i join others o on i.z = o.a where o.|
**should respect alias speciifcation**

Results:
a - public.others.a (Column)
b - public.others.b (Column)
c - public.others.c (Column)

--------------

select name from instruments i join others o on i.z = o.a where o.a |
select name from instruments i join others o on i.z = o.a where o.a = |
**should not prioritize suggest columns or schemas (right side of binary expression)**

Results:
instruments - public.instruments (Table)
others - public.others (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)

--------------

select name from instruments i join others o on i.z = o.a where o.a = i.|

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)

--------------

select name from instruments i join others o on i.z = o.a where o.a = i.z |
select name from instruments i join others o on i.z = o.a where o.a = i.z a|
select name from instruments i join others o on i.z = o.a where o.a = i.z and |
**should prioritize columns that aren't already mentioned**

Results:
o.b - public.others.b (Column)
o.c - public.others.c (Column)
i.created_at - public.instruments.created_at (Column)
i.id - public.instruments.id (Column)
i.name - public.instruments.name (Column)

--------------

select name from instruments i join others o on i.z = o.a where o.a = i.z and i.|

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)

--------------

select name from instruments i join others o on i.z = o.a where o.a = i.z and i.i|

Results:
id - public.instruments.id (Column)

--------------

select name from instruments i join others o on i.z = o.a where o.a = i.z and i.id |
select name from instruments i join others o on i.z = o.a where o.a = i.z and i.id > |

Results:
instruments - public.instruments (Table)
others - public.others (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)

--------------

select name from instruments i join others o on i.z = o.a where o.a = i.z and i.id > 5|
select name from instruments i join others o on i.z = o.a where o.a = i.z and i.id > 5; |
